# rsbt

./: .env  .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: rust.yml
_rsbt-app/: Cargo.toml
_rsbt-app/examples/: deep_experiments.rs  tokio_app_example.rs
_rsbt-app/src/announce/: mod.rs
_rsbt-app/src/application/: app_properties.rs  app_runtime.rs  app_service.rs  app_type_factory.rs
_rsbt-app/src/commands/: any_command.rs  any_request.rs  any_result.rs
_rsbt-app/src/config/: initial_configuration.rs
_rsbt-app/src/managers/: mod.rs
_rsbt-app/src/peer/: mod.rs
_rsbt-app/src/tokio/: mod.rs  socket_listener.rs  tokio_oneshot_receiver.rs  tokio_oneshot_sender.rs  tokio_socket_connect.rs
_rsbt-app/src/torrent/: torrent_process.rs
_rsbt-web-common/: README.md
_rsbt-web-wizard/: .gitignore  Cargo.toml  README.md
_rsbt-web-wizard/web/: package-lock.json  package.json  webpack.config.js
_rsbt-web-wizard/web/src/: index.html
_rsbt/src/: main.rs
_rsbt/web/: index.html
fixtures/: tears_of_steel_1080p.webm.torrent
rsbt/: Cargo.toml  README.md
rsbt-app/: Cargo.toml  README.md
rsbt-app/examples/: deep_experiments.rs  tokio_app_example.rs
rsbt-app/src/: app.rs  config.rs  error.rs  experiments.rs  lib.rs  message.rs  properties.rs  result.rs  status.rs  torrent_event.rs
rsbt-app/src/actor/: download.rs  mod.rs
rsbt-app/src/announce/: announces.rs  mod.rs
rsbt-app/src/app/: message_channel.rs  mod.rs
rsbt-app/src/application/: app.rs  app_command_sender.rs  app_handler.rs  app_properties.rs  app_runtime.rs  app_type_factory.rs  default_app_service.rs  mod.rs
rsbt-app/src/blocking_app/: blocking_actor_handle.rs  builder.rs  message_channel.rs  message_receiver.rs  mod.rs
rsbt-app/src/bridge/: mod.rs  oneshot_channel.rs  oneshot_receiver.rs  oneshot_sender.rs  receiver.rs  sender.rs  socket_stream.rs
rsbt-app/src/commands/: any_result.rs  command.rs  command_request_add_torrent.rs  command_request_any.rs  command_request_find_torrent_by_hash_id.rs  command_request_quit.rs  command_sender.rs  mod.rs
rsbt-app/src/config/: mod.rs
rsbt-app/src/manager/: default_torrent_manager.rs  default_torrents_manager.rs  manager_factory.rs  mod.rs  torrent_manager.rs  torrents_manager.rs
rsbt-app/src/managers/: incoming_connections_manager.rs  torrents_manager.rs
rsbt-app/src/methods/: mod.rs  request.rs
rsbt-app/src/peer/: peers.rs
rsbt-app/src/statistic/: mod.rs  statistics.rs
rsbt-app/src/storage/: mod.rs  storage.rs
rsbt-app/src/tests/: test_app.rs  test_app_command_receiver.rs  test_receiver.rs  test_socket_listener.rs  test_socket_stream.rs
rsbt-app/src/tokio/: mod.rs  tokio_app.rs  tokio_app_runtime.rs  tokio_mpsc_sender.rs  tokio_oneshot_channel.rs  tokio_oneshot_receiver.rs  tokio_oneshot_sender.rs  tokio_receiver.rs  tokio_socket_stream.rs  tokio_type_factory.rs
rsbt-app/src/torrent/: mod.rs  torrent_header.rs  torrent_process.rs  torrent_token.rs
rsbt-app/src/transport/: incoming_connection.rs  mod.rs  socket_connect.rs
rsbt-app/src/types/: mod.rs  oneshot_sender.rs  type_factory.rs
rsbt-bencode/: Cargo.toml  README.md
rsbt-bencode-derive/: Cargo.toml  README.md
rsbt-bencode-derive/src/: lib.rs
rsbt-bencode-nom/: Cargo.toml  README.md
rsbt-bencode-nom/src/: lib.rs
rsbt-bencode-nom/src/parser/: bencode.rs
rsbt-bencode-nom/src/types/: bencode.rs
rsbt-bencode-nom7/: Cargo.toml  README.md
rsbt-bencode-nom7/src/: lib.rs
rsbt-bencode-nom7/src/parser/: bencode.rs  mod.rs
rsbt-bencode-nom7/src/types/: bencode.rs  mod.rs
rsbt-bencode/src/: lib.rs
rsbt-bencode/src/parser/: bencode.rs  mod.rs  torrent.rs
rsbt-bencode/src/types/: bendcode.rs  handshake.rs  mod.rs  peer.rs  torrent.rs  torrent_info.rs  torrent_info_file_raw.rs  torrent_info_raw.rs
rsbt-bencode/tests/: samples_parse.rs
rsbt-defs/: Cargo.toml  README.md
rsbt-defs/src/: lib.rs
rsbt-memory-hub/: Cargo.toml  MIT-LICENSE  README.md
rsbt-memory-hub/src/: arena.rs  lib.rs
rsbt-rt/: Cargo.toml
rsbt-rt/src/: lib.rs
rsbt-rt/src/tokio_runtime/: mod.rs
rsbt-types/: Cargo.toml  README.md
rsbt-types/src/: consts.rs  lib.rs  torrent.rs
rsbt-web-common/: Cargo.toml  README.md  build.rs
rsbt-web-common/src/: lib.rs
rsbt-web-wizard/: Cargo.toml  build.rs
rsbt-web-wizard/src/: lib.rs
rsbt-web-wizard/web/: index.html  index.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
rsbt-web-wizard/web/src/: index.css  index.html  index.tsx
rsbt/bins/: Cargo.toml
rsbt/cli/: Cargo.toml
rsbt/cli/src/: lib.rs  wizard.rs
rsbt/cli/src/command/: download_command.rs  mod.rs
rsbt/src/: cli.rs  main.rs
rsbt/web/: Cargo.toml  all-default-redirect.html  index.html
rsbt/web/src/: lib.rs  wizard.rs
src/: any_result.rs  lib.rs  main.rs  properties.rs  result.rs
src/application/: app.rs  app_command_channel.rs  app_command_receiver.rs  app_command_sender.rs  app_handler.rs  app_properties.rs  app_runtime.rs  mod.rs  oneshot_channel.rs
src/bridge/: mod.rs  oneshot_receiver.rs  socket_listener.rs  socket_stream.rs
src/commands/: command.rs  command_request.rs  mod.rs  quit_command_request.rs
src/error/: mod.rs
src/methods/: any_request.rs  any_result.rs  method.rs  mod.rs  request.rs
src/tasks/: app.rs  app_command_channel.rs  app_command_receiver.rs  app_command_sender.rs  app_factory.rs  app_handler.rs  app_properties.rs  app_runtime.rs  mod.rs  oneshot_channel.rs  receiver.rs  sender.rs
src/tests/: mod.rs  test_app.rs  test_app_command_channel.rs  test_app_command_receiver.rs  test_app_command_sender.rs  test_app_runtime.rs  test_oneshot_channel.rs  test_receiver.rs  test_sender.rs  test_socket_listener.rs
src/tokio/: mod.rs  tokio_app.rs  tokio_app_command_channel.rs  tokio_app_command_receiver.rs  tokio_app_command_sender.rs  tokio_app_runtime.rs  tokio_factory.rs  tokio_oneshot_channel.rs  tokio_oneshot_receiver.rs  tokio_oneshot_sender.rs  tokio_receiver.rs  tokio_sender.rs  tokio_socket_listener.rs
src/transport/: default_incoming_connection.rs  incoming_connection.rs  mod.rs
(+10 files in other folders)
