[workspace]

members = [
    "rsbt/*",
    "rsbt-app",
    "rsbt-bencode-nom",
    "rsbt-bencode-derive",
    "rsbt-defs",
    "rsbt-memory-hub",
    "rsbt-types",
]
resolver = "2"

[workspace.package]

rust-version = "1.65"
edition = "2021"
authors = ["Alexander Korolev <alexander.korolev.germany@gmail.com>"]
version = "0.1.0"
license = "Unlicense OR MIT"
readme = "README.md"
repository = "https://github.com/rsbt/rsbt"
homepage = "https://github.com/rsbt/rsbt"

[workspace.dependencies]

log = { version = "0.4", default-features = false }

env_logger = { version = "0.9", default-features = false, features = [
    "atty",
    "termcolor",
    "humantime",
] }

clap = { version = "4", default-features = false, features = [
    "cargo",
    "color",
    "derive",
    "env",
    "error-context",
    "help",
    "std",
    "suggestions",
    "usage",
] }

dotenv = { version = "0.15", default-features = false }

tokio = { version = "1", default-features = false, features = [
    "net",
    "rt-multi-thread",
    "sync",
] }
tokio-util = { version = "0.7", default-features = false, features = [
    "codec",
    "net",
] }
tokio-stream = { version = "0.1", default-features = false, features = [] }

futures = { version = "^0.3.0" }

async-trait = { version = "0.1" }

thiserror = "1"

[profile.release]
lto = true
