[package]
name = "rsbt-app"
categories = []
description = """
rsbt description.
"""
keywords = []

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []

[dependencies]
log = { workspace = true }

thiserror = { workspace = true }

clap = { workspace = true }

futures = { workspace = true }

rsbt-types = { path = "../rsbt-types" }
rsbt-rt = { path = "../rsbt-rt" }