[package]
name = "rsbt-app"
categories = []
description = """
rsbt description.
"""
keywords = []

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []

[dependencies]
log = { workspace = true }

thiserror = { workspace = true }

clap = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }

futures = { workspace = true }
async-trait = { workspace = true }

rsbt-types = { path = "../rsbt-types" }
