[package]
name = "rsbt-app"
categories = []
description = """
rsbt description.
"""
keywords = []

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []

[dependencies]
clap.workspace = true
thiserror.workspace = true
tracing.workspace = true
trait-variant.workspace = true

tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true

rsbt-types.workspace = true
