[package]
name = "rsbt-bencode-derive"
version = "0.1.0"
authors = ["Alexander Korolev <alexander.korolev.germany@gmail.com>"]
edition = "2021"
categories = []
description = """
rsbt-bencode-derive description.
"""
homepage = "https://github.com/rsbt/rsbt"
keywords = []
license = "Unlicense OR MIT"
readme = "README.md"
repository = "https://github.com/rsbt/rsbt"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["extra-traits"] }
quote = "1.0"
proc-macro-error = "1.0"
proc-macro2 = "1"
