[package]
name = "rsbt-bencode-derive"
categories = []
description = """
rsbt-bencode-derive description.
"""
keywords = []

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["extra-traits"] }
quote = "1.0"
proc-macro-error = "1.0"
proc-macro2 = "1"
