[package]
name = "rsbt-bencode-nom"
categories = []
description = """
rsbt-bencode-nom description.
"""
keywords = []

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["std", "derive"]
std = ["nom/std", "rsbt-defs/std", "displaydoc/std"]
alloc = ["nom/alloc", "rsbt-defs/alloc"]
derive = ["rsbt-bencode-derive"]

[dependencies]
displaydoc = { version = "0.2", default-features = false }

nom = { version = "7.1", default-features = false }

rsbt-bencode-derive = { path = "../rsbt-bencode-derive", optional = true }
rsbt-defs = { path = "../rsbt-defs" }
