[package]
name = "rsbt-memory-hub"
version = "0.1.0"
authors = ["Alexander Korolev <alexander.korolev.germany@gmail.com>"]
edition = "2021"
categories = []
description = """
rsbt-memory-hub description.
"""
homepage = "https://github.com/rsbt/rsbt"
keywords = []
license = "Unlicense OR MIT"
readme = "README.md"
repository = "https://github.com/rsbt/rsbt"

[dependencies]
