[package]
name = "rsbt-memory-hub"
categories = []
description = """
rsbt-memory-hub description.
"""
keywords = []

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
