[package]
name = "rsbt-rt"
categories = []
description = """
rsbt-rt description.
"""
keywords = []

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[features]

default = ["tokio_1"]
tokio_1 = ["tokio"]

[dependencies]
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "net",
], optional = true }

futures = { version = "^0.3.0" }
