[package]
name = "rsbt-rt"
categories = []
description = """
rsbt-rt description.
"""
keywords = []

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[features]

default = ["tokio_1"]
tokio_1 = ["tokio", "tokio-util", "tokio-stream"]

[dependencies]
tokio = { version = "1", default-features = false, features = [
    "net",
    "rt-multi-thread",
    "sync",
], optional = true }
tokio-util = { version = "0.7", default-features = false, features = [
    "codec",
    "net",
], optional = true }
tokio-stream = { version = "0.1", default-features = false, features = [
], optional = true }

futures = { workspace = true }