[package]
name = "rsbt-types"
version = "0.1.0"
authors = ["Alexander Korolev <alexander.korolev.germany@gmail.com>"]
edition = "2018"
categories = []
description = """
rsbt-types description.
"""
homepage = "https://github.com/rsbt/rsbt"
keywords = []
license = "Unlicense OR MIT"
readme = "README.md"
repository = "https://github.com/rsbt/rsbt"

[features]

default = ["std"]
std = ["rsbt-bencode-nom7/std", "sha1/std"]
alloc = ["rsbt-bencode-nom7/alloc"]

[dependencies]

rsbt-bencode-nom7 = { path = "../rsbt-bencode-nom7", default-features = false, features = [
    "derive",
] }

sha1 = { version = "0.10", default-features = false }
