[package]
name = "rsbt-types"
categories = []
description = """
rsbt-types description.
"""
keywords = []

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[features]

default = ["std"]
std = ["rsbt-bencode-nom/std", "sha1/std"]
alloc = ["rsbt-bencode-nom/alloc"]

[dependencies]

rsbt-bencode-nom = { path = "../rsbt-bencode-nom", default-features = false, features = [
    "derive",
] }

sha1 = { version = "0.10", default-features = false }
