[package]
name = "rsbt-web-common"
version = "0.1.0"
authors = ["Alexander Korolev <alexander.korolev.germany@gmail.com>"]
edition = "2018"
categories = []
description = """
rsbt-web-common description.
"""
homepage = "https://github.com/rsbt/rsbt"
keywords = []
license = "Unlicense OR MIT"
readme = "README.md"
repository = "https://github.com/rsbt/rsbt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web-static-files = { version = "3.0.5", features = ["change-detection"] }

[build-dependencies]
actix-web-static-files = { version = "3.0.5", features = ["change-detection"] }
