[package]
name = "rsbt-web-wizard"
version = "0.1.0"
authors = ["Alexander Korolev <kilork@yandex.ru>"]
edition = "2018"
categories = []
description = """
rsbt-web-wizard description.
"""
homepage = "https://github.com/rsbt/rsbt"
keywords = []
license = "Unlicense OR MIT"
readme = "README.md"
repository = "https://github.com/rsbt/rsbt"

[dependencies]
actix-web-static-files = "2"

[build-dependencies]
actix-web-static-files = "2"
