[package]
name = "rsbt"
version = "0.1.0"
authors = ["Alexander Korolev <kilork@yandex.ru>"]
edition = "2018"
categories = []
description = """
rsbt description.
"""
homepage = "https://github.com/rsbt/rsbt"
keywords = []
license = "Unlicense OR MIT"
readme = "README.md"
repository = "https://github.com/rsbt/rsbt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = ["dev"]

dev = []

[dependencies]
rsbt-app = { path = "../rsbt-app" }
rsbt-web-wizard = { path = "../rsbt-web-wizard" }

actix = "0.9"
actix-rt = "1.1"
actix-service = "1.0"
actix-web = { version = "2.0", features = ["rustls"] }
actix-web-static-files = "2"
dotenv = "0.15"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.7"