[package]
name = "rsbt"
version = "0.1.0"
authors = ["Alexander Korolev <kilork@yandex.ru>"]
edition = "2018"
categories = []
description = """
rsbt description.
"""
homepage = "https://github.com/rsbt/rsbt"
keywords = []
license = "Unlicense OR MIT"
readme = "README.md"
repository = "https://github.com/rsbt/rsbt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

# default = []
default = ["dev"]

dev = []

[dependencies]
rsbt-app = { path = "../rsbt-app" }
rsbt-web-wizard = { path = "../rsbt-web-wizard" }
rsbt-web-common = { path = "../rsbt-web-common" }

actix = "0.10"
actix-rt = "1.1"
actix-service = "1.0"
actix-web = { version = "3", features = ["rustls"] }
actix-web-static-files = { version = "3.0.5", features = ["change-detection"] }
anyhow = "1.0"
dirs = "3"
dotenv = "0.15"
env_logger = "0.8"
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "0.2", features = ["full"] }
clap-verbosity-flag = "0.3"