[package]
name = "rsbt-commandline"
categories = []
description = """
rsbt description.
"""
keywords = []

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []

[dependencies]
log = { workspace = true }
env_logger =  { workspace = true }

anyhow = "1"

clap = { workspace = true }

dotenv = { workspace = true }

rsbt-app = { path = "../../rsbt-app" }
